# support_management

./: README.md  pyproject.toml
support_management/: hooks.py  modules.txt  tasks.py
support_management/fixtures/: print_format.json
support_management/methods/: mark_attendance.py  visit.py
support_management/public/js/: item.js  item_list.js  maintenance_visit.js  support_management.js  warranty_claim.js
support_management/support_management/: attendance.py
support_management/support_management/custom/: attendance.json  customer.json  division.json  employee_checkin.json  engineer_visits.json  installation_note_item.json  issue.json  item.json  item_barcode.json  maintenance_visit.json  maintenance_visit_purpose.json  manufacturer.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  segment.json  serial_no.json  warranty_claim.json
support_management/support_management/doc_events/: employee_checkin.py  engineer_visit.py  installation_note.py  item.py  warranty_claim.py
support_management/support_management/doctype/city/: city.js  city.json  city.py  test_city.py
support_management/support_management/doctype/description_of_issue/: description_of_issue.js  description_of_issue.json  description_of_issue.py  test_description_of_issue.py
support_management/support_management/doctype/detailed_support_issue/: detailed_support_issue.js  detailed_support_issue.json  detailed_support_issue.py  test_detailed_support_issue.py
support_management/support_management/doctype/division/: division.js  division.json  division.py  test_division.py
(+56 files in other folders)
